# NanoMatch

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
src/: train.py
src/bridge/: bindings.cpp
src/dashboard/: app.py  data_loader.py
src/engine/: Engine.hpp  LatencyQueue.hpp  Matcher.hpp  OrderBook.hpp  types.hpp
src/gym_env/: nanomatch_env.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/controls/: SimulationControls.tsx
ui/src/components/globe/: LatencyArcs.tsx  WorldGlobe.tsx
ui/src/components/panels/: AgentDecisionTable.tsx  EquityCurve.tsx  LatencyConfigurator.tsx  OrderBookHeatmap.tsx  PriceLadder.tsx  RLPerformanceMetrics.tsx
ui/src/hooks/: useWebSocketSnapshot.ts
